update post TMA2021

--- a/content/posts/TMA2021.md
+++ b/content/posts/TMA2021.md
@@ -18,3 +18,5 @@ https://dl.ifip.org/db/conf/tma/tma2021/tma2021-paper2.pdf
   author={Gouel, Matthieu and Vermeulen, Kevin and Fourmaux, Olivier and Friedman, Timur and Beverly, Robert}
 }
 ```
+
+Check out our technical report: https://arxiv.org/abs/2107.03988
