--- a/content/posts/20220301CCR.md
+++ b/content/posts/20220301CCR.md
@@ -14,6 +14,7 @@ We describe a new system for distributed tracing at the IP level of the routes t
 
 ---
 
+Paper on ACM library: https://dl.acm.org/doi/10.1145/3523230.3523232
 Paper in Open Access: https://hal.archives-ouvertes.fr/hal-03597580/document  
 Iris website: https://iris.dioptra.io/#/
 
