--- a/content/posts/20220301CCR.md
+++ b/content/posts/20220301CCR.md
@@ -1,7 +1,7 @@
 +++
 title = "Zeph & Iris map the internet: A resilient reinforcement learning approach to distributed IP route tracing"
 date = "2022-03-01"
-tags = ["research", "paper", "ccr2022"]
+tags = ["research", "paper", "ccr2022", "cores2022"]
 abstract  = "We describe a new system for distributed tracing at the IP level of the routes that packets take through the IPv4 internet. Our Zeph algorithm coordinates route tracing efforts across agents at multiple vantage points, assigning to each agent a number of /24 destination prefixes in proportion to its probing budget and chosen according to a reinforcement learning heuristic that aims to maximize the number of multipath links discovered. Zeph runs on top of Iris, our fault tolerant system for orchestrating internet measurements across distributed agents of heterogeneous probing capacities. Iris is built around third party free open source software and modern containerization technology, thereby presenting a new model for assembling a resilient and maintainable internet measurement architecture. We show that carefully choosing the destinations to probe from which vantage point matters to optimize topology discovery and that a system can learn which assignment will maximize the overall discovery based on previous measurements. After 10 cycles of probing, Zeph is capable of discovering 2.4M nodes and 10M links in a cycle of 6 hours, when deployed on 5 Iris agents. This is at least 2 times more nodes and 5 times more links than other production systems for the same number of prefixes probed."
 +++
 
@@ -17,6 +17,8 @@ We describe a new system for distributed tracing at the IP level of the routes t
 Paper on ACM library: https://dl.acm.org/doi/10.1145/3523230.3523232  
 Paper in Open Access: https://hal.archives-ouvertes.fr/hal-03597580/document  
 Iris website: https://iris.dioptra.io/#/
+
+French adaptation presented at CoRes 2022: https://hal.archives-ouvertes.fr/hal-03656974/document
 
 ---
 
